# iot-based-station-planner

./: README.md  pyproject.toml
IoT/: final_dashboard.json
Simulink/: UAV_dist_before_discharge.slx
path_evaluations/: path_evaluator.ipynb
stationlist/: charging_stations_uk.csv
