[tool.poetry]
name = "iot-based-station-planner"
version = "0.1.0"
description = ""
authors = ["nathanshankar <66565433+nathanshankar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
